--- a/PepitoSchool.Presentation/PepitoSchool.Presentation.csproj
+++ b/PepitoSchool.Presentation/PepitoSchool.Presentation.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PepitoSchool.Domain\PepitoSchool.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
